style(backgound and navbar containers) changed to flex-wrap and fixed home.html dropdown menu to align to left

--- a/server/frontend/src/components/assets/style.css
+++ b/server/frontend/src/components/assets/style.css
@@ -4,17 +4,22 @@ img{
 }
 
 .background{
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-basis: 200;
+    flex-direction: column;
     background-image: linear-gradient(180deg, rgba(213,213,213,1) 0%, rgba(231,231,231,1) 32%, rgba(245,245,245,1) 100%);
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: relative;
-    height: 100vh;
-    width: 100vw;
 }
 
 .bar{
     color: rgb(46,41,78);
     background-image: linear-gradient(180deg, rgba(46,41,78,1) 0%, rgba(74,68,107,1) 100%);
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 200;
 }
 
 .card{
