--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,18 +1,20 @@
 .background{
     display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-basis: 200;
     flex-direction: column;
     background-image: linear-gradient(180deg, rgba(213,213,213,1) 0%, rgba(231,231,231,1) 32%, rgba(245,245,245,1) 100%);
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: relative;
-    height: auto;
-    width: 100vw;
 }
 
 .bar{
     color: rgb(46,41,78);
     background-image: linear-gradient(180deg, rgba(46,41,78,1) 0%, rgba(74,68,107,1) 100%);
-    height: 1in;
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 200;
 }
 
 img{
